--- a/source/index.html
+++ b/source/index.html
@@ -1,19 +1,57 @@
 <!DOCTYPE html>
-<html lang="ru" data-validate="html">
+<html  lang="ru" data-validate="html">
 
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SUPERGYM</title>
+    <title>Фитнес центр "SUPERGYM"</title>
+    <link rel="preload" href="./fonts/alumni-sans-semi-bold.woff2" type="font/woff2" as="font" crossorigin="anonymous">
+    <link rel="preload" href="./fonts/alumni-sans-extra-bold.woff2" type="font/woff2" as="font" crossorigin="anonymous">
+    <link rel="preload" href="./fonts/roboto-condensed-light.woff2" type="font/woff2" as="font" crossorigin="anonymous">
+    <link rel="preload" href="./fonts/roboto-condensed-regular.woff2" type="font/woff2" as="font" crossorigin="anonymous">
+    <link rel="preload" href="./fonts/roboto-condensed-bold.woff2" type="font/woff2" as="font" crossorigin="anonymous">
     <link rel="stylesheet" href="sass/style.scss">
+
   </head>
 
   <body class="page-body">
-    <!-- пример использования спрайта -->
-    <img src="/__spritemap#sprite-logo-view" alt="Это спрайт">
-    <svg>
-      <use href="/__spritemap#sprite-user"></use>
-    </svg>
+    <!-- hero -->
+    <section class="hero">
+
+    </section>
+
+    <!-- about -->
+    <section class="about"></section>
+
+    <!-- price -->
+    <section class=""></section>
+
+    <!-- games -->
+    <section class=""></section>
+
+    <!-- juri -->
+    <section class=""></section>
+
+    <!-- features -->
+    <section class=""></section>
+
+    <!-- offers -->
+    <section class=""></section>
+
+    <!-- faq -->
+    <section class=""></section>
+
+    <!-- reviews -->
+    <section class=""></section>
+
+    <!-- form -->
+    <section class=""></section>
+
+    <!-- footer -->
+    <section class=""></section>
+
+
+
     <!-- примеры требуемых атрибутов data-test="*" -->
     <div data-test="hero">hero</div>
     <div data-test="about">about</div>
@@ -26,6 +64,7 @@
     <div data-test="reviews">reviews</div>
     <div data-test="form">form</div>
     <div data-test="footer">footer</div>
+
     <script type="module" src="js/main.js"></script>
   </body>
 
