add data-test in section

--- a/source/index.html
+++ b/source/index.html
@@ -16,39 +16,39 @@
 
   <body class="page-body">
     <!-- hero -->
-    <section class="hero">
+    <section class="hero" data-test="hero">
 
     </section>
 
     <!-- about -->
-    <section class="about"></section>
+    <section class="about" data-test="about"></section>
 
     <!-- price -->
-    <section class=""></section>
+    <section class="price" data-test="price"></section>
 
     <!-- games -->
-    <section class=""></section>
+    <section class="games" data-test="games"></section>
 
-    <!-- juri -->
-    <section class=""></section>
+    <!-- jury -->
+    <section class="jury" data-test="juri"></section>
 
     <!-- features -->
-    <section class=""></section>
+    <section class="features" data-test="features"></section>
 
     <!-- offers -->
-    <section class=""></section>
+    <section class="offers" data-test="offers"></section>
 
     <!-- faq -->
-    <section class=""></section>
+    <section class="faq" data-test="faq"></section>
 
     <!-- reviews -->
-    <section class=""></section>
+    <section class="reviews" data-test="reviews"></section>
 
     <!-- form -->
-    <section class=""></section>
+    <section class="form" data-test="form"></section>
 
     <!-- footer -->
-    <section class=""></section>
+    <section class="footer" data-test="footer"></section>
 
 
 
