--- a/source/index.html
+++ b/source/index.html
@@ -1,71 +1,139 @@
 <!DOCTYPE html>
-<html  lang="ru" data-validate="html">
+<html lang="ru" data-validate="html">
 
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Фитнес центр "SUPERGYM"</title>
-    <link rel="preload" href="./fonts/alumni-sans-semi-bold.woff2" type="font/woff2" as="font" crossorigin="anonymous">
-    <link rel="preload" href="./fonts/alumni-sans-extra-bold.woff2" type="font/woff2" as="font" crossorigin="anonymous">
-    <link rel="preload" href="./fonts/roboto-condensed-light.woff2" type="font/woff2" as="font" crossorigin="anonymous">
-    <link rel="preload" href="./fonts/roboto-condensed-regular.woff2" type="font/woff2" as="font" crossorigin="anonymous">
-    <link rel="preload" href="./fonts/roboto-condensed-bold.woff2" type="font/woff2" as="font" crossorigin="anonymous">
-    <link rel="stylesheet" href="sass/style.scss">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Фитнес центр "SUPERGYM"</title>
+  <link rel="preload" href="./fonts/alumni-sans-semi-bold.woff2" type="font/woff2" as="font" crossorigin="anonymous">
+  <link rel="preload" href="./fonts/alumni-sans-extra-bold.woff2" type="font/woff2" as="font" crossorigin="anonymous">
+  <link rel="preload" href="./fonts/roboto-condensed-light.woff2" type="font/woff2" as="font" crossorigin="anonymous">
+  <link rel="preload" href="./fonts/roboto-condensed-regular.woff2" type="font/woff2" as="font" crossorigin="anonymous">
+  <link rel="preload" href="./fonts/roboto-condensed-bold.woff2" type="font/woff2" as="font" crossorigin="anonymous">
+  <link rel="stylesheet" href="sass/style.scss">
 
-  </head>
+</head>
 
-  <body class="page-body">
-    <!-- hero -->
-    <section class="hero" data-test="hero">
+<body class="page-body">
 
-    </section>
+  <!-- hero -->
+  <div class="hero" data-test="hero">
+    <div class="page__container">
+      <header class="hero__header">
+        <picture>
+          <img class="hero__header-image" src="img/logo.svg" width="100" height="20"
+            alt="Логотип Фитнес центра «SUPERGYM»">
+        </picture>
+        <a class="hero__header-contacts" href="tel⁺79999999999">8 800 555-55-55</a>
+      </header>
+      <section class="section hero__info">
+        <h1 class="hero__title">
+          Фитнес центр
+        </h1>
+        <p class="section__title hero__additional-info">
+          Омск
+        </p>
+        <p class="hero__description">
+          Тренажёрный&nbsp;зал Групповые&nbsp;занятия Кардио-зона
+        </p>
+        <div class="hero__image-wrapper">
+          <picture>
+            <img src="img/hero-img.jpg" alt="Тренер фитнес центра в футболке c логотипом Супермена">
+          </picture>
+        </div>
+        <a class="hero__action button button--primary" href="#">
+          Купить абонемент
+        </a>
+      </section>
+    </div>
+  </div>
 
-    <!-- about -->
-    <section class="about" data-test="about"></section>
+  <!-- about -->
+  <section class="about" data-test="about">
+    <div class="page__container">
 
-    <!-- price -->
-    <section class="price" data-test="price"></section>
+    </div>
+  </section>
 
-    <!-- games -->
-    <section class="games" data-test="games"></section>
+  <!-- price -->
+  <section class="price" data-test="price">
+    <div class="page__container">
 
-    <!-- jury -->
-    <section class="jury" data-test="juri"></section>
+    </div>
+  </section>
 
-    <!-- features -->
-    <section class="features" data-test="features"></section>
+  <!-- games -->
+  <section class="games" data-test="games">
+    <div class="page__container">
 
-    <!-- offers -->
-    <section class="offers" data-test="offers"></section>
+    </div>
+  </section>
 
-    <!-- faq -->
-    <section class="faq" data-test="faq"></section>
+  <!-- jury -->
+  <section class="jury" data-test="juri">
+    <div class="page__container">
 
-    <!-- reviews -->
-    <section class="reviews" data-test="reviews"></section>
+    </div>
+  </section>
 
-    <!-- form -->
-    <section class="form" data-test="form"></section>
+  <!-- features -->
+  <section class="features" data-test="features">
+    <div class="page__container">
 
-    <!-- footer -->
-    <section class="footer" data-test="footer"></section>
+    </div>
+  </section>
+
+  <!-- offers -->
+  <section class="offers" data-test="offers">
+    <div class="page__container">
+
+    </div>
+  </section>
+
+  <!-- faq -->
+  <section class="faq" data-test="faq">
+    <div class="page__container">
+
+    </div>
+  </section>
+
+  <!-- reviews -->
+  <section class="reviews" data-test="reviews">
+    <div class="page__container">
+
+    </div>
+  </section>
+
+  <!-- form -->
+  <section class="form" data-test="form">
+    <div class="page__container">
+
+    </div>
+  </section>
+
+  <!-- footer -->
+  <section class="footer" data-test="footer">
+    <div class="page__container">
+
+    </div>
+  </section>
 
 
 
-    <!-- примеры требуемых атрибутов data-test="*" -->
-    <div data-test="hero">hero</div>
-    <div data-test="about">about</div>
-    <div data-test="price">price</div>
-    <div data-test="games">games</div>
-    <div data-test="juri">juri</div>
-    <div data-test="features">features</div>
-    <div data-test="offers">offers</div>
-    <div data-test="faq">faq</div>
-    <div data-test="reviews">reviews</div>
-    <div data-test="form">form</div>
-    <div data-test="footer">footer</div>
+  <!-- примеры требуемых атрибутов data-test="*" -->
+  <div data-test="hero">hero</div>
+  <div data-test="about">about</div>
+  <div data-test="price">price</div>
+  <div data-test="games">games</div>
+  <div data-test="juri">juri</div>
+  <div data-test="features">features</div>
+  <div data-test="offers">offers</div>
+  <div data-test="faq">faq</div>
+  <div data-test="reviews">reviews</div>
+  <div data-test="form">form</div>
+  <div data-test="footer">footer</div>
 
-    <script type="module" src="js/main.js"></script>
-  </body>
+  <script type="module" src="js/main.js"></script>
+</body>
 
 </html>
