--- a/source/index.html
+++ b/source/index.html
@@ -51,7 +51,39 @@
   <!-- about -->
   <section class="about" data-test="about">
     <div class="page__container">
-
+      <div class="about__wrapper">
+        <h2 class="section__title about__title">
+          Тренажёрный зал
+        </h2>
+        <strong class="about__additional-info">
+          Просторный зал площадью 900 кв/м
+        </strong>
+        <p>Supergym – самый большой фитнес центр за Уралом и идеальное место для укрепления тела и здоровья. Тренажёрный
+          зал оснащён всем необходимым современным оборудованием для всех спортсменов.
+        </p>
+        <p>В зале расположены отдельная зона для Crossfit и кардио-зона с 40 тренажёрами. Также в фитнес центре
+          есть несколько оборудованных залов для различных видов групповых занятий.
+        </p>
+        <picture>
+          <img src="img/about-img.jpg" alt="Тренажерный зал с тренажерами">
+        </picture>
+        <div class="about__video">
+          <div class="about__video-cover video-cover">
+            <picture>
+              <img src="img/about-img.jpg" alt="Обложка к видео">
+            </picture>
+            <button class="video-cover__button-play" type="button">
+              <span class="visually-hidden">Проиграть ролик</span>
+              <svg class="video-cover__button-play-icon" width="12" height="12">
+                <img src="img/Player_button.svg" alt="кнопка плэй">
+              </svg>
+            </button>
+          </div>
+          <div class="about__video-source"
+            data-src="https://www.youtube.com/embed/9TZXsZItgdw?si=id0cuciuFR3HgFx2?rel=0&showinfo=0&autoplay=1&amp;controls=0">
+          </div>
+        </div>
+      </div>
     </div>
   </section>
 
