add price section end

--- a/source/index.html
+++ b/source/index.html
@@ -149,7 +149,7 @@
                       <img src="img/2700.png" alt="2700 рублей>
                     </picture>
                   </p>
-                  <a class="subscription-card__action button" href="#">Купить абонемент</a>
+                  <a class=" subscription-card__action button" href="#">Купить абонемент</a>
                 </li>
               </ul>
             </li>
@@ -168,48 +168,68 @@
                   <a class="subscription-card__action button" href="#">Купить абонемент</a>
                 </li>
                 <li class="subscription__card subscription-card">
-                  <h3 class="visually-hidden"></h3>
-                  <p class="subscription-card__title"></p>
-                  <p class="subscription-card__title"></p>
-                  <p class="subscription-card__description"></p>
-                  <p class="subscription-card__price"></p>
-                  <a class="subscription-card__action button" href="#"></a>
+                  <h3 class="visually-hidden">Занятия днём</h3>
+                  <p class="subscription-card__title">Дневной</p>
+                  <p class="subscription-card__description">с 8:00 до 17:00</p>
+                  <p class="subscription-card__price" data-price="10200" aria-hidden="true">
+                    <span class="subscription-card__price-value" aria-hidden="false">10200</span>
+                    <picture>
+                      <img src="img/2700.png" alt="10200 рублей">
+                    </picture>
+                  </p>
+                  <a class="subscription-card__action button" href="#">Купить абонемент</a>
                 </li>
                 <li class="subscription__card subscription-card">
-                  <h3 class="visually-hidden"></h3>
-                  <p class="subscription-card__title"></p>
-                  <p class="subscription-card__title"></p>
-                  <p class="subscription-card__description"></p>
-                  <p class="subscription-card__price"></p>
-                  <a class="subscription-card__action button" href="#"></a>
+                  <h3 class="visually-hidden">Занятия в любое время</h3>
+                  <p class="subscription-card__title">Полный день</p>
+                  <p class="subscription-card__description">с 8:00 до 22:00</p>
+                  <p class="subscription-card__price" data-price="16200" aria-hidden="true">
+                    <span class="subscription-card__price-value" aria-hidden="false">16200</span>
+                    <picture>
+                      <img src="img/5000.png" alt="16200 рублей">
+                    </picture>
+                  </p>
+                  <a class="subscription-card__action button" href="#">Купить абонемент</a>
                 </li>
               </ul>
             </li>
-            <li class="subscription__tab-item">
+            <li class="subscription__tab-item" data-tab="year">
               <ul class="subscription__cards">
                 <li class="subscription__card subscription-card">
-                  <h3 class="visually-hidden"></h3>
-                  <p class="subscription-card__title"></p>
-                  <p class="subscription-card__title"></p>
-                  <p class="subscription-card__description"></p>
-                  <p class="subscription-card__price"></p>
-                  <a class="subscription-card__action button" href="#"></a>
+                  <h3 class="visually-hidden">Занятия с тренером</h3>
+                  <p class="subscription-card__title">С тренером</p>
+                  <p class="subscription-card__description">12 занятий</p>
+                  <p class="subscription-card__price" data-price="60000" aria-hidden="true">
+                    <span class="subscription-card__price-value" aria-hidden="false">60000</span>
+                    <picture>
+                      <img src="img/1700.png" alt="60000 рублей">
+                    </picture>
+                  </p>
+                  <a class="subscription-card__action button" href="#">Купить абонемент</a>
                 </li>
                 <li class="subscription__card subscription-card">
-                  <h3 class="visually-hidden"></h3>
-                  <p class="subscription-card__title"></p>
-                  <p class="subscription-card__title"></p>
-                  <p class="subscription-card__description"></p>
-                  <p class="subscription-card__price"></p>
-                  <a class="subscription-card__action button" href="#"></a>
+                  <h3 class="visually-hidden">Занятия днём</h3>
+                  <p class="subscription-card__title">Дневной</p>
+                  <p class="subscription-card__description">с 8:00 до 17:00</p>
+                  <p class="subscription-card__price" data-price="20400" aria-hidden="true">
+                    <span class="subscription-card__price-value" aria-hidden="false">20400</span>
+                    <picture>
+                      <img src="img/2700.png" alt="20400 рублей">
+                    </picture>
+                  </p>
+                  <a class="subscription-card__action button" href="#">Купить абонемент</a>
                 </li>
                 <li class="subscription__card subscription-card">
-                  <h3 class="visually-hidden"></h3>
-                  <p class="subscription-card__title"></p>
-                  <p class="subscription-card__title"></p>
-                  <p class="subscription-card__description"></p>
-                  <p class="subscription-card__price"></p>
-                  <a class="subscription-card__action button" href="#"></a>
+                  <h3 class="visually-hidden">Занятия в любое время</h3>
+                  <p class="subscription-card__title">Полный день</p>
+                  <p class="subscription-card__description">с 8:00 до 22:00</p>
+                  <p class="subscription-card__price" data-price="32400" aria-hidden="true">
+                    <span class="subscription-card__price-value" aria-hidden="false">32400</span>
+                    <picture>
+                      <img src="img/5000.png" alt="32400 рублей">
+                    </picture>
+                  </p>
+                  <a class="subscription-card__action button" href="#">Купить абонемент</a>
                 </li>
               </ul>
             </li>
