--- a/source/index.html
+++ b/source/index.html
@@ -122,7 +122,7 @@
                   <p class="subscription-card__price" data-price="5000" aria-hidden="true">
                     <span class="subscription-card__price-value" aria-hidden="false">5000</span>
                     <picture aria-hidden="false">
-                      <img class="subscription-card__currency" src="img/1700.png" alt="1700 рублей">
+                      <img class="subscription-card__currency" src="img/5000.png" alt="5000 рублей">
                     </picture>
                   </p>
                   <a class="subscription-card__action button" href="#">Купить абонемент</a>
@@ -242,7 +242,36 @@
   <!-- games -->
   <section class="games" data-test="games">
     <div class="page__container">
-
+      <div class="game__wrapper">
+        <h2 class="visually__hidden">
+          Ближайшие соревнования
+        </h2>
+        <div class="games__info">
+          <p class="section__title games__title">Super Games</p>
+          <dl class="games__data-time">
+            <dt class="games__data-title">
+              Дата
+            </dt>
+            <dd class="games__data-value">
+              <span class="games__data-day">7</span>
+              <span class="games__data-month-year">Марта<br>2019</span>
+            </dd>
+            <dt class="games__time-title">
+              Время
+            </dt>
+            <dd class="games__time-value">
+              <span class="games__time-hours">12:00</span>
+            </dd>
+          </dl>
+          <p class="games__description">Ежегодные соревнования по CrossFit</p>
+          <a class="games__action button button--primary" href="#">Заполнить заявку</a>
+        </div>
+        <div class="games__picture-wrapper">
+          <picture>
+            <img src="img/games.jpg" alt="Логотип соревнований">
+          </picture>
+        </div>
+      </div>
     </div>
   </section>
 
