--- a/source/index.html
+++ b/source/index.html
@@ -240,7 +240,7 @@
   </section>
 
   <!-- games -->
-  <section class="games" data-test="games">
+  <section class="section games" data-test="games">
     <div class="page__container">
       <div class="game__wrapper">
         <h2 class="visually__hidden">
@@ -283,9 +283,61 @@
   </section>
 
   <!-- features -->
-  <section class="features" data-test="features">
+  <section class="section features" data-test="features">
     <div class="page__container">
-
+      <h2 class="section__title features__title">Наши преимущества</h2>
+      <ul class="features__lest">
+        <li class="features__item features__card">
+          <dl>
+            <dt>900</dt>
+            <dd>кв/м</dd>
+          </dl>
+          <div>
+            <h3>Площадь</h3>
+            <p>Занимайтесь&nbsp;без&nbsp;очередей и&nbsp;толкучки</p>
+          </div>
+        </li>
+        <li class="features__item features__card">
+          <dl>
+            <dt>70</dt>
+            <dd>машин</dd>
+          </dl>
+          <div>
+            <h3>Собственная&nbsp;парковка</h3>
+            <p>Вы всегда найдёте место для своей машины&nbsp;на нашей парковке</p>
+          </div>
+        </li>
+        <li class="features__item features__card">
+          <dl>
+            <dt>100</dt>
+            <dd>Тренажеров</dd>
+          </dl>
+          <div>
+            <h3 class="visually__hidden">Много Тренажеров</h3>
+            <p>Современные тренажёры на&nbsp;все&nbsp;группы мышц</p>
+          </div>
+        </li>
+        <li class="features__item features__card">
+          <dl>
+            <dt>350</dt>
+            <dd>мест</dd>
+          </dl>
+          <div>
+            <h3>Комфорт</h3>
+            <p>Просторные раздевалки, душевые, фен, Wi-Fi, кулеры</p>
+          </div>
+        </li>
+        <li class="features__item features__card">
+          <dl>
+            <dt>5+</dt>
+            <dd>лет</dd>
+          </dl>
+          <div>
+            <h3>Тренерский опыт</h3>
+            <p>Добивайтесь своих целей быстрее с&nbsp;профессиональным тренером</p>
+          </div>
+        </li>
+      </ul>
     </div>
   </section>
 
