--- a/source/index.html
+++ b/source/index.html
@@ -342,9 +342,43 @@
   </section>
 
   <!-- offers -->
-  <section class="offers" data-test="offers">
+  <section class="section offers" data-test="offers">
     <div class="page__container">
-
+      <div class="offers__wrapper">
+        <h2 class="section__title offers__title">Акции</h2>
+        <div class="offers__promos">
+          <div class="offers__item offers__item--special">
+            <div class="offers__item-description">
+              <h3>Год
+                <span>4999</span>
+              </h3>
+              <p>Безлимитный абонемент в тренажёрный зал</p>
+              <a class="link link--primary" href="#">Подробнее</a>
+            </div>
+            <div class="offers__item-image">
+              <picture>
+                <img src="img/offers.jpg" alt="Девушка в спортивном костюме">
+              </picture>
+            </div>
+          </div>
+          <ul class="offers__list">
+            <li class="offers__item">
+              <div class="offers__item-description">
+                <h3>Месяц бесплатно</h3>
+                <p>Приведи друга, получи абонгемент в подарок</p>
+                <a class="link link--secondary" href="#">Подробнее</a>
+              </div>
+            </li>
+            <li class="offers__item">
+              <div class="offers__item-description">
+                <h3>Скидка 20%</h3>
+                <p>корпоративный фитнес командой</p>
+                <a class="link link--secondary" href="#">Подробнее</a>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </div>
     </div>
   </section>
 
